background from body and background from chat added

--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
 
 <body>
 
+  <div class="grid">
+    <div class="background"></div>
+    <div class="background2"></div>
+  </div>
+
+  <div class="chat">
+    <div class="chat__border">
+
+    </div>
+  </div>
   <!-- Samuel Green
   Available to Walk
 
