--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/acda7c321d.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/styles.css">
 </head>
 
@@ -21,7 +22,27 @@
 
   <div class="chat">
     <div class="chat__border">
+      <header class="chat__header">
+        <div class="chat__header__head"></div>
 
+        <div class="chat__header__box">
+          <div class="chat__header__box__per">
+            <div class="chat__header__icons">
+              <i class="fas fa-chevron-left"></i>
+              <img src="/images/avatar.jpg" alt="">
+            </div>
+
+            <div class="chat__header__data">
+              <h2>Samuel Green</h2>
+              <p>Available to Walk</p>
+            </div>
+          </div>
+
+          <div class="chat__header__ellipsis">
+            <i class="fas fa-ellipsis-v"></i>
+          </div>
+        </div>
+      </header>
     </div>
   </div>
   <!-- Samuel Green
