--- a/index.html
+++ b/index.html
@@ -43,6 +43,65 @@
           </div>
         </div>
       </header>
+
+      <div class="chat__chats">
+        <div class="chat__chats__left">
+          <div class="chats__left">
+            <p>
+              That sounds great. I’d be happy with that.
+            </p>
+          </div>
+
+          <div class="chats__left">
+            <p>
+              Could you send over some pictures of your dog, please?
+            </p>
+          </div>
+        </div>
+
+        <div class="chat__chats__right">
+          <div class="chats__right">
+            <img src="/images/dog-image-1.jpg" alt="">
+            <img src="/images/dog-image-2.jpg" alt="">
+            <img src="/images/dog-image-3.jpg" alt="">
+          </div>
+
+          <div class="chats__right">
+            <p>
+              Here are a few pictures. She’s a happy girl!
+            </p>
+          </div>
+
+          <div class="chats__right">
+            <p>
+              Can you make it?
+            </p>
+          </div>
+        </div>
+
+        <div class="chat__chats__left">
+          <div class="chats__left">
+            <p>
+              She looks so happy! The time we discussed works. How long shall I take her out for?
+            </p>
+          </div>
+
+          <div class="chats__input">
+            <div class="input__radio">
+              <input type="radio">30 minute walk
+            </div>
+            <span>$29</span>
+          </div>
+
+          <div class="chats__input">
+            <div class="input__radio">
+              <input type="radio">1 hour walk
+            </div>
+            <span>$49</span>
+          </div>
+        </div>
+
+      </div>
     </div>
   </div>
   <!-- Samuel Green
@@ -59,7 +118,7 @@
   She looks so happy! The time we discussed works. How long shall I take her out for?
 
   30 minute walk
-  $29
+  
 
   1 hour walk
   $49
