input text and button added

--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@
           </div>
         </div>
 
+        <div class="chat__message">
+          <input type="text" placeholder="Type a message…">
+          <button><i class="fas fa-chevron-right"></i></button>
+        </div>
+
       </div>
     </div>
   </div>
