--- a/index.html
+++ b/index.html
@@ -111,12 +111,14 @@
 
   <main class="main">
     <h1>Simple booking</h1>
-    <p>tay in touch with our dog walkers through the chat interface. This makes it easy to
+    <p>
+      Stay in touch with our dog walkers through the chat interface. This makes it easy to
       discuss arrangements and make bookings. Once the walk has been completed you can rate
-      your walker and book again all through the chat.</p>
+      your walker and book again all through the chat.
+    </p>
   </main>
 
-  <div class="attribution">
+  <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div> -->
