--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
     </p>
   </main>
 
-  <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
+  <footer class="footer">
+    <p> Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a></p>
+    <p>Coded by <a href="https://github.com/YoimelDev" target="_blank">YoimelDev</a></p>
+  </footer>
 </body>
 
 </html>
