--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
 
       <div class="chat__chats">
         <div class="chat__chats__left">
-          <div class="chats__left">
+          <div class="chats__left animation ani1">
             <p>
               That sounds great. I’d be happy with that.
             </p>
           </div>
 
-          <div class="chats__left">
+          <div class="chats__left animation ani2">
             <p>
               Could you send over some pictures of your dog, please?
             </p>
@@ -60,19 +60,19 @@
         </div>
 
         <div class="chat__chats__right">
-          <div class="chats__right">
+          <div class="chats__right animation ani3">
             <img src="/images/dog-image-1.jpg" alt="">
             <img src="/images/dog-image-2.jpg" alt="">
             <img src="/images/dog-image-3.jpg" alt="">
           </div>
 
-          <div class="chats__right">
+          <div class="chats__right animation ani4">
             <p>
               Here are a few pictures. She’s a happy girl!
             </p>
           </div>
 
-          <div class="chats__right">
+          <div class="chats__right animation ani5">
             <p>
               Can you make it?
             </p>
@@ -80,20 +80,20 @@
         </div>
 
         <div class="chat__chats__left">
-          <div class="chats__left">
+          <div class="chats__left animation ani6">
             <p>
               She looks so happy! The time we discussed works. How long shall I take her out for?
             </p>
           </div>
 
-          <div class="chats__input">
+          <div class="chats__input animation ani7">
             <div class="input__radio">
               <input type="radio">30 minute walk
             </div>
             <span>$29</span>
           </div>
 
-          <div class="chats__input">
+          <div class="chats__input animation ani8">
             <div class="input__radio">
               <input type="radio">1 hour walk
             </div>
@@ -101,7 +101,7 @@
           </div>
         </div>
 
-        <div class="chat__message">
+        <div class="chat__message animation">
           <input type="text" placeholder="Type a message…">
           <button><i class="fas fa-chevron-right"></i></button>
         </div>
