desktop view finished

--- a/index.html
+++ b/index.html
@@ -20,103 +20,106 @@
     <div class="background2"></div>
   </div>
 
-  <div class="chat">
-    <div class="chat__border">
-      <header class="chat__header">
-        <div class="chat__header__head"></div>
+  <div class="container">
+    <div class="chat">
+      <div class="chat__border">
+        <header class="chat__header">
+          <div class="chat__header__head"></div>
 
-        <div class="chat__header__box">
-          <div class="chat__header__box__per">
-            <div class="chat__header__icons">
-              <i class="fas fa-chevron-left"></i>
-              <img src="/images/avatar.jpg" alt="">
+          <div class="chat__header__box">
+            <div class="chat__header__box__per">
+              <div class="chat__header__icons">
+                <i class="fas fa-chevron-left"></i>
+                <img src="/images/avatar.jpg" alt="">
+              </div>
+
+              <div class="chat__header__data">
+                <h2>Samuel Green</h2>
+                <p>Available to Walk</p>
+              </div>
             </div>
 
-            <div class="chat__header__data">
-              <h2>Samuel Green</h2>
-              <p>Available to Walk</p>
+            <div class="chat__header__ellipsis">
+              <i class="fas fa-ellipsis-v"></i>
+            </div>
+          </div>
+        </header>
+
+        <div class="chat__chats">
+          <div class="chat__chats__left">
+            <div class="chats__left animation ani1">
+              <p>
+                That sounds great. I’d be happy with that.
+              </p>
+            </div>
+
+            <div class="chats__left animation ani2">
+              <p>
+                Could you send over some pictures of your dog, please?
+              </p>
             </div>
           </div>
 
-          <div class="chat__header__ellipsis">
-            <i class="fas fa-ellipsis-v"></i>
-          </div>
-        </div>
-      </header>
-
-      <div class="chat__chats">
-        <div class="chat__chats__left">
-          <div class="chats__left animation ani1">
-            <p>
-              That sounds great. I’d be happy with that.
-            </p>
-          </div>
-
-          <div class="chats__left animation ani2">
-            <p>
-              Could you send over some pictures of your dog, please?
-            </p>
-          </div>
-        </div>
-
-        <div class="chat__chats__right">
-          <div class="chats__right animation ani3">
-            <img src="/images/dog-image-1.jpg" alt="">
-            <img src="/images/dog-image-2.jpg" alt="">
-            <img src="/images/dog-image-3.jpg" alt="">
-          </div>
-
-          <div class="chats__right animation ani4">
-            <p>
-              Here are a few pictures. She’s a happy girl!
-            </p>
-          </div>
-
-          <div class="chats__right animation ani5">
-            <p>
-              Can you make it?
-            </p>
-          </div>
-        </div>
-
-        <div class="chat__chats__left">
-          <div class="chats__left animation ani6">
-            <p>
-              She looks so happy! The time we discussed works. How long shall I take her out for?
-            </p>
-          </div>
-
-          <div class="chats__input animation ani7">
-            <div class="input__radio">
-              <input type="radio">30 minute walk
+          <div class="chat__chats__right">
+            <div class="chats__right animation ani3">
+              <img src="/images/dog-image-1.jpg" alt="">
+              <img src="/images/dog-image-2.jpg" alt="">
+              <img src="/images/dog-image-3.jpg" alt="">
             </div>
-            <span>$29</span>
-          </div>
 
-          <div class="chats__input animation ani8">
-            <div class="input__radio">
-              <input type="radio">1 hour walk
+            <div class="chats__right animation ani4">
+              <p>
+                Here are a few pictures. She’s a happy girl!
+              </p>
             </div>
-            <span>$49</span>
-          </div>
-        </div>
 
-        <div class="chat__message animation">
-          <input type="text" placeholder="Type a message…">
-          <button><i class="fas fa-chevron-right"></i></button>
+            <div class="chats__right animation ani5">
+              <p>
+                Can you make it?
+              </p>
+            </div>
+          </div>
+
+          <div class="chat__chats__left">
+            <div class="chats__left animation ani6">
+              <p>
+                She looks so happy! The time we discussed works. How long shall I take her out for?
+              </p>
+            </div>
+
+            <div class="chats__input animation ani7">
+              <div class="input__radio">
+                <input type="radio">30 minute walk
+              </div>
+              <span>$29</span>
+            </div>
+
+            <div class="chats__input animation ani8">
+              <div class="input__radio">
+                <input type="radio">1 hour walk
+              </div>
+              <span>$49</span>
+            </div>
+          </div>
+
+          <div class="chat__message animation">
+            <input type="text" placeholder="Type a message…">
+            <button><i class="fas fa-chevron-right"></i></button>
+          </div>
         </div>
       </div>
     </div>
+
+    <main class="main">
+      <h1>Simple booking</h1>
+      <p>
+        Stay in touch with our dog walkers through the chat interface. This makes it easy to
+        discuss arrangements and make bookings. Once the walk has been completed you can rate
+        your walker and book again all through the chat.
+      </p>
+    </main>
   </div>
 
-  <main class="main">
-    <h1>Simple booking</h1>
-    <p>
-      Stay in touch with our dog walkers through the chat interface. This makes it easy to
-      discuss arrangements and make bookings. Once the walk has been completed you can rate
-      your walker and book again all through the chat.
-    </p>
-  </main>
 
   <footer class="footer">
     <p> Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a></p>
