--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
 
 <body>
 
-  <div class="grid">
-    <div class="background"></div>
-    <div class="background2"></div>
+  <div class="background">
+    <div class="bg"></div>
   </div>
 
   <div class="container">
